@@ -161,7 +161,7 @@ the Free Software Foundation; either version 2 of the License, or
 SEE ALSO
 --------
 
-manpage:tigrc[5], git(7), gitk(1)
+manpage:tigrc[5], manpage:tigmanual[7], git(7), gitk(1)
 
 Online resources:
 
