@@ -1,0 +1,20 @@
+tigmanual(7)
+============
+
+NAME
+----
+tigmanual - text-mode interface for git
+
+SYNOPSIS
+--------
+[verse]
+tig        [options] [revisions] [--] [paths]
+tig show   [options] [revisions] [--] [paths]
+tig blame  [rev] path
+tig status
+tig <      [git command output]
+
+DESCRIPTION
+-----------
+
+include::manual.txt[]
